--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+<a href="xyang2316.github.io/paper/HyperU-GCN.pdf" target="_blank">CIKM2022</a>
 </body>
 </html>
